--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   include:
     - php: 7.3
     - php: 8.0
+    - php: 8.1
 
 before_script:
   - composer self-update
@@ -20,6 +21,9 @@ before_script:
       travis_retry composer update
     fi
     if [ $(phpenv version-name) == '8.0' ]; then
+      travis_retry composer update --ignore-platform-reqs
+    fi
+    if [ $(phpenv version-name) == '8.1' ]; then
       travis_retry composer update --ignore-platform-reqs
     fi
 
